src/global.css
@tailwind base;
@tailwind components;

@layer base {
    :root {
        --header-height: 64px;
    }

    body {
        @apply bg-blue-50
    }
}

*, :after, :before {
    border: 0 solid #e0e0e0;
}

.ql-tooltip{
    left: 0 !important;
}

@tailwind utilities;

